--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-oauth/google": "^0.12.2",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "gapi-script": "^1.2.0",
     "moment": "^2.29.4",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^5.2.1",
     "react-media-recorder": "^1.6.6",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^8.2.0",
     "react-video-js-player": "^1.1.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
